# recsys-mlops

./: .gitignore  README.md  pyproject.toml
src/: app_utils.py  my_merlin_flow.py  upload_to_snowflake.py
src/dbt/logs/: dbt.log.legacy
src/dbt/models/metaflow/: articles_staging.sql  customers_staging.sql  transactions_staging.sql
