[tool.poetry]
name = "recs-at-resonable-scale"
version = "0.1.0"
description = ""
authors = ["enandhag <enandhag@ford.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
metaflow = "^2.8.0"
python-dotenv = "0.19.2"
comet-ml = "3.26.0"
pyarrow = "8.0.0"
nvtabular = "^1.8.1"
numpy = "1.22"
merlin-core = "0.8.0"
merlin-models = "0.10.0"
localstack = "^1.4.0"
dbt-snowflake = "^1.4.2"
snowflake-connector-python = "^3.0.1"
tensorflow = "2.9.1"
transformers = "4.21.0"
torch = "1.12.0"
streamlit = "1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
